rearranged js to have a js file per page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
     </div>
     <p><a href="#" id="authorise">Click here</a> to authorise the app!</p>
     <script src="./js/vendor.bundle.js"></script>
-    <script src="./js/bundle-land.js"></script>
+    <script src="./js/bundle-index.js"></script>
   </body>
 </html>
