refactor javascript page files to have a separate file for categories

--- a/src/transport.html
+++ b/src/transport.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <script src="./js/vendor.bundle.js"></script>
-    <script src="./js/bundle-yourdata.js"></script>
+    <script src="./js/bundle-category.js"></script>
 </body>
 
 </html>
